# PRSense

backend/: .gitignore  main.py  pyproject.toml
backend/app/core/: config.py
backend/app/handlers/: installation.py  issue.py  issue_comment.py  pull_request.py
backend/app/inngest/: __init__.py  auto_pr.py  client.py  indexing.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  webhooks.py
backend/app/services/: embeddings.py  frontend.py  llm.py  vectordb.py
backend/app/services/chunker/: __init__.py  languages.py  parser.py
backend/app/services/github/: __init__.py  auth.py  client.py  pulls.py  repos.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(protected)/: error.tsx  layout.tsx  not-found.tsx
frontend/app/(protected)/chat/: loading.tsx  page.tsx
frontend/app/(protected)/dashboard/: loading.tsx  page.tsx
frontend/app/(protected)/logs/: loading.tsx  page.tsx
frontend/app/(protected)/rules/: loading.tsx  page.tsx
frontend/app/hooks/: use-auth-redirect.ts
frontend/components/icons/: sidebar-icons.tsx
frontend/components/layout/: app-sidebar.tsx  notification-bell.tsx  notification-content.tsx
frontend/components/providers/: liveblocks-provider.tsx  usage-provider.tsx
frontend/components/ui/: status.tsx
frontend/lib/: constants.ts  github.ts  plan-limits.ts  prisma.ts
frontend/lib/data/: activity-logger.ts  repositories.ts  rules.ts  users.ts
frontend/lib/handlers/: github.ts
frontend/prisma/: schema.prisma
(+35 files in other folders)
